_docs/kustomize/akash-operator-hostname/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: operator-hostname
  labels:
    app.kubernetes.io/name: hostname
    app.kubernetes.io/instance: hostname-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  selector:
    app.kubernetes.io/name: hostname
    app.kubernetes.io/instance: hostname-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
  ports:
    - name: rest
      port: 8080
