_docs/kustomize/akash-operator-hostname/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akash-hostname-operator
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"

spec:
  ingressClassName: "akash-ingress-class"
  rules:
    - host: akash-hostname-operator.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akash-hostname-operator
                port:
                  name: status
